--- a/changelog
+++ b/changelog
@@ -6,4 +6,5 @@
 # AUTHOR： CC
 # ABSTRACT: Initialize the new project
     * Add a helper to the app directory
-    
+    - add registration page
+    - add edit page
