[ADD]add post submit function

--- a/changelog
+++ b/changelog
@@ -44,4 +44,4 @@
 # DATE：20200322
 # AUTHOR： CC
     - add module create method: single-choice, multiple-choice, filling(need to improve request)
-
+    - add post submit function(need to improve request)
